--- a/login.html
+++ b/login.html
@@ -56,6 +56,7 @@
 
                 <div class="col-md-12">
                   <button
+                    type="submit"
                     class="btn btn-primary login-submit-button"
                     name="login-submit"
                     id="login-submit"
