--- a/sign_up.html
+++ b/sign_up.html
@@ -99,6 +99,7 @@
                 </div>
                 <div class="col-md-12">
                   <button
+                  type="button"
                     class="btn btn-primary signup-submit-button"
                     name="signup-submit"
                     id="signup-submit"
